# python-project-lvl3

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: page-loader-check.yml
page_loader/: __init__.py  cli.py  download.py
page_loader/downloader/: files_downloader.py  site_downloader.py
page_loader/lib/: f_name_generator.py  name_generator.py
page_loader/scripts/: page_loader.py
page_loader/utils/: exception.py  init_logging.py  logging_tools.py  progress_bar.py  request_tools.py
tests/: test_download.py  test_f_name_generator.py  test_files_downloader.py  test_name_generator.py  test_page_loader.py
tests/fixtures/: expected_index.html  index.html  index_error.html  script2.js  script3.js
